force-app/main/default/objects/Supplier_Portal_Config__mdt/Supplier_Portal_Config__mdt.object-meta.xml
<CustomObject>
    <description>Metadata created to help maintenance of the supplier portal page</description>
    <label>Supplier Portal Config</label>
    <pluralLabel>Supplier Portal Configs</pluralLabel>
</CustomObject>