force-app/main/default/objects/Supplier_Portal_Config__mdt/fields/Bottom_Picture__c.field-meta.xml
<CustomField>
    <fullName>Bottom_Picture__c</fullName>
    <label>Bottom Picture</label>
    <type>Url</type>
</CustomField>