force-app/main/default/objects/Supplier_Portal_Config__mdt/fields/Carousel_Picture_1__c.field-meta.xml
<CustomField>
    <fullName>Carousel_Picture_1__c</fullName>
    <label>Carousel Picture 1</label>
    <type>Url</type>
</CustomField>