force-app/main/default/objects/Supplier_Portal_Config__mdt/fields/Carousel_Picture_3__c.field-meta.xml
<CustomField>
    <fullName>Carousel_Picture_3__c</fullName>
    <label>Carousel Picture 3</label>
    <type>Url</type>
</CustomField>