force-app/main/default/objects/Supplier_Portal_Config__mdt/fields/Configuration_Type__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Type__c</fullName>
    <label>Configuration Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Information</fullName>
            </value>
            <value>
                <fullName>Supplier Stage</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
                <default>true</default>
                <label>FAQ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>