force-app/main/default/objects/Supplier_Portal_Config__mdt/fields/Cover_Photo__c.field-meta.xml
<CustomField>
    <fullName>Cover_Photo__c</fullName>
    <description>Picture to be displayed in the beginning of the page</description>
    <label>Cover Photo</label>
    <type>Url</type>
</CustomField>