force-app/main/default/objects/Supplier_Portal_Config__mdt/fields/Supplier_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Portal_URL__c</fullName>
    <description>Field to store the URL of the community login page. to be displayed in the website</description>
    <label>Supplier Portal URL</label>
    <type>Url</type>
</CustomField>